# stacks

./: .buildinfo  .gitignore  .travis.yml  README.html  README.md  conf.py  genindex.html  index.html  index.rst  objects.inv  perf.html  requirements.txt  search.html  searchindex.js
.github/workflows/: build.yml  (+1 more)
_sources/: README.md.txt  perf.rst.txt
dars/: dars.html  dars.rst  index.html  index.rst  terms_of_use.html  terms_of_use.md
dbrs/: README.html  dbrs.html  dbrs.rst  index.html  releasenote.html  releasenote.md  terms_of_use.html
dlrs/: README.html  README.md  authors.txt  bert-performance.html  bert-performance.rst  dlrs.html  dlrs.rst  index.html  index.rst  terms_of_use.html  terms_of_use.md
docs/: LICENSE  Makefile  README.md  conf.py  index.rst  substitutions.txt
dsrs/: README.html  README.md  index.html  index.rst  terms_of_use.html  terms_of_use.md
hpcrs/: Dockerfile  Makefile  NEWS.html  NEWS.md  README.html  README.md  index.html  index.rst  setup.py  terms_of_use.html
hpcrs/d2s/: README.html  Readme.md  d2s.py  pyproject.toml  setup.py
hpcrs/d2s/src/d2s/: console.py
hpcrs/d2s/src/d2s.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hpcrs/d2s/tests/: d2s_tests.py
mers/: AUTHORS.html  AUTHORS.md  BUGS.html  BUGS.md  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  LICENSES.html  LICENSES.md  NEWS.html  NEWS.md  README.html  README.md  index.html  index.rst  mers.html  mers.rst  releasenotes.html  releasenotes.md  terms_of_use.html
oneContainer/: index.html  index.rst
whitepapers/: index.html  index.rst
(+382 files in other folders)
