[tool.poetry]
name = "d2s"
version = "0.1.0"
license = "Apache2.0"
description = "Tool to convert docker images to singularity images."
authors = ["Laxmi, Ganesan <laxmi.ganesan@intel.com>", "Unnikrishnan Nair, Rahul <rahul.unnikrishnan.nair@intel.com>"]
readme = "Readme.md"
keywords = ["d2s"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
d2s = "d2s.console:main"



